# spvrc

./: .gitignore  CMakeLists.txt  README.md
cmake/: generate_spvrc_source.cmake
include/spvrc/: spvrc.hpp
shaders/: shader2.comp
src/: main.cpp  spvrc.cpp
